[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/rubberContainer.gd" type="Script" id=1]
[ext_resource path="res://Containers/conrub.gltf" type="PackedScene" id=2]
[ext_resource path="res://Containers/conrubfull.gltf" type="PackedScene" id=3]
[ext_resource path="res://Containers/conrubhalf.gltf" type="PackedScene" id=4]
[ext_resource path="res://Menu UI Assets/meter_0.gltf" type="PackedScene" id=5]
[ext_resource path="res://Menu UI Assets/meter_1.gltf" type="PackedScene" id=6]
[ext_resource path="res://Menu UI Assets/meter_2.gltf" type="PackedScene" id=7]
[ext_resource path="res://Menu UI Assets/meter_3.gltf" type="PackedScene" id=8]
[ext_resource path="res://Menu UI Assets/meter_4.gltf" type="PackedScene" id=9]
[ext_resource path="res://Menu UI Assets/meter_5.gltf" type="PackedScene" id=10]

[sub_resource type="BoxShape" id=1]

[sub_resource type="BoxShape" id=2]

[node name="rubberContainer" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.23, 0, 0, 0, 0.3, 0, 0, 0, 0.25, 4.29153e-005, 0.00213182, -0.00196505 )
shape = SubResource( 1 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 0.23, 0, 0, 0, 0.3, 0, 0, 0, 0.2, 0, 0, 0 )
shape = SubResource( 2 )

[node name="conEmpty" parent="StaticBody" instance=ExtResource( 2 )]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.00313771, 0, 0.00721431 )

[node name="conHalf" parent="StaticBody" instance=ExtResource( 3 )]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -0.00288048, -0.0594814, -0.0113783 )

[node name="conFull" parent="StaticBody" instance=ExtResource( 4 )]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, -0.0453355, -0.00751874 )
visible = false

[node name="limit0" parent="." instance=ExtResource( 5 )]
transform = Transform( -8.74228e-009, 0, 0.2, 0, 0.2, 0, -0.2, 0, -8.74228e-009, -0.263, -0.1, 0.181 )
visible = false

[node name="limit1" parent="." instance=ExtResource( 6 )]
transform = Transform( -8.74228e-009, 0, 0.2, 0, 0.2, 0, -0.2, 0, -8.74228e-009, -0.263, -0.1, 0.181 )
visible = false

[node name="limit2" parent="." instance=ExtResource( 7 )]
transform = Transform( -8.74228e-009, 0, 0.2, 0, 0.2, 0, -0.2, 0, -8.74228e-009, -0.263, -0.1, 0.181 )
visible = false

[node name="limit3" parent="." instance=ExtResource( 8 )]
transform = Transform( -8.74228e-009, 0, 0.2, 0, 0.2, 0, -0.2, 0, -8.74228e-009, -0.263, -0.1, 0.181 )
visible = false

[node name="limit4" parent="." instance=ExtResource( 9 )]
transform = Transform( -8.74228e-009, 0, 0.2, 0, 0.2, 0, -0.2, 0, -8.74228e-009, -0.263, -0.1, 0.181 )
visible = false

[node name="limit5" parent="." instance=ExtResource( 10 )]
transform = Transform( -8.74228e-009, 0, 0.2, 0, 0.2, 0, -0.2, 0, -8.74228e-009, -0.263, -0.1, 0.181 )
visible = false
